k3d/kong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-service
spec:
  selector:
    app: kong
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
