k3d/nextfrontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextfrontend-service
spec:
  selector:
    app: nextfrontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
