k3d/video-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: video-service
spec:
  selector:
    app: video
  ports:
    - protocol: TCP
      port: 5003
      targetPort: 5003
